tests/NormalTests/paczka1/fuzzy1/19754097.err
Error in line 1: s0fdb28 S150 90,9
Error in line 2: s0fdb28 A359 9,0
Error in line 8: A459 A459 79,8
Error in line 10: A459 S150 18,7
Error in line 4: s0fdb28 A459 29,7
Error in line 22: GpVYqyxj A459 7,97
Error in line 12: A459 A88 98,6
Error in line 25: A459 S150 26,2
